Fix vercel.json configuration

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,5 @@
 {
     "framework": "nextjs",
     "buildCommand": "npm run build",
-    "installCommand": "npm install",
-    "engines": {
-      "node": "18.x"
-    }
+    "installCommand": "npm install"
   }
